--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=pagamentos
+
+spring.datasource.url=jdbc:mysql://localhost:3306/microservices-java
+spring.datasource.username=root
+spring.datasource.password=1234
